# rr-lensflares

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
lenses/: compile_lens_data.py
src/: CMakeLists.txt  LensSystem.cpp  LensSystem.h
src/lenses/: compile_lens_data.py
src/raytraced-lensflares/: CMakeLists.txt
src/raytraced-lensflares/executable/: CMakeLists.txt  UiControls.h  deviceCode.h  main.cpp
src/raytraced-lensflares/executable/shader/: fragment.glsl  geometry.glsl  vertex.glsl
src/raytraced-lensflares/executable/textures/: aperture_bladed.psd  aperture_round.psd
src/raytraced-lensflares/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
src/raytraced-lensflares/lib/: CMakeLists.txt  Geometry.cpp  Geometry.h  GlmUtils.h  GlslShaders.cpp  GlslShaders.h  GridGenerator.cpp  GridGenerator.h  LensSystem.cpp  LensSystem.h  LensSystems.h  Mesh.h  Ray.cpp  Ray.h  Resources.cpp  Resources.h  Utils.cpp  Utils.h
src/raytraced-lensflares/tests/: CMakeLists.txt  GlmCatchUtils.h  TestLensSystem.cpp  catch.hpp  main.cpp
